Firebase bug fixes